--- a/src/eepe.qrc
+++ b/src/eepe.qrc
@@ -32,5 +32,7 @@
         <file>images/exit.png</file>
         <file>images/er9x_manual.png</file>
         <file>icon.png</file>
+        <file>images/load_model.png</file>
+        <file>images/save_model.png</file>
     </qresource>
 </RCC>
