--- a/src/mixerdialog.ui
+++ b/src/mixerdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>209</width>
-    <height>372</height>
+    <width>226</width>
+    <height>415</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -61,7 +61,7 @@
       </widget>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="offset_label">
        <property name="text">
         <string>Offset</string>
        </property>
@@ -104,28 +104,28 @@ p, li { white-space: pre-wrap; }
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Curve</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <widget class="QComboBox" name="curvesCB">
        <property name="whatsThis">
         <string>The curve used by the mix</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
+     <item row="6" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
         <string>Switch</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="6" column="1">
       <widget class="QComboBox" name="switchesCB">
        <property name="whatsThis">
         <string>Switch used by the mix.
@@ -133,14 +133,14 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
+     <item row="7" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
         <string>Warning</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="7" column="1">
       <widget class="QComboBox" name="warningCB">
        <property name="whatsThis">
         <string>Mixer warning.
@@ -168,14 +168,14 @@ Setting this value will cause a beep to be emmitted when this value is active.</
        </item>
       </widget>
      </item>
-     <item row="7" column="0">
+     <item row="8" column="0">
       <widget class="QLabel" name="label_9">
        <property name="text">
         <string>Multiplex</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="8" column="1">
       <widget class="QComboBox" name="mltpxCB">
        <property name="whatsThis">
         <string>Multiplexer
@@ -201,6 +201,23 @@ This determines how mixer values are added.
          <string>REPLACE</string>
         </property>
        </item>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Flightmode Trim</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QCheckBox" name="FMtrimChkB">
+       <property name="whatsThis">
+        <string>If checked - will add the trim from the source (if available)</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
       </widget>
      </item>
     </layout>
