--- a/trunk/src/mixerdialog.ui
+++ b/trunk/src/mixerdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>226</width>
-    <height>415</height>
+    <width>350</width>
+    <height>529</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -365,7 +365,7 @@ p, li { white-space: pre-wrap; }
      </item>
     </layout>
    </item>
-   <item row="3" column="0">
+   <item row="5" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -387,6 +387,16 @@ p, li { white-space: pre-wrap; }
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="4" column="0">
+    <widget class="QPlainTextEdit" name="mixerComment"/>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Comment</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
